--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
-				<a href="images/Angebot1.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot1.jpg" alt="gallery img"></a>
+				<a href="images/Angebot1.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot1.jpg" alt="Angebot 1"></a>
 				<div>
 					<h3>Angebot 1 (für 8/10 Personen)</h3>
 					<span>1x Pizzablech (nach wahl)</span><br>
@@ -82,7 +82,7 @@
 					<span>+ Pizzabrötchen mit Kräuercreme</span>
 					<h3>35,- €</h3>
 				</div>
-				<a href="images/angebot2.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/angebot2.jpg" alt="gallery img"></a>
+				<a href="images/Angebot2.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot2.jpg" alt="Angebot 2"></a>
 				<div>
 					<h3>Angebot 2 (für 18/20 Personen)</h3>
 					<span>2x Pizzablech (nach wahl)</span><br>
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<a href="images/Angebot3.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot3.jpg" alt="gallery img"></a>
+				<a href="images/Angebot3.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot3.jpg" alt="Angebot 3"></a>
 				<div>
 					<h3>Angebot 3 (für 4/5 Personen)</h3>
 					<span>1x Maxi-Pizza (nach wahl)</span><br>
@@ -103,7 +103,7 @@
 					<span>+ Pizzabrötchen mit Kräuercreme</span>
 					<h3>25,- €</h3>
 				</div>
-				<a href="images/Angebot4.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot4.jpg" alt="gallery img"></a>
+				<a href="images/Angebot4.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Angebot4.jpg" alt="Angebot 4"></a>
 				<div>
 				<h3>Angebot 4 (für 3/4 Personen)</h3>
 					<span>1x Maxi-Pizza (nach wahl)</span><br>
@@ -124,7 +124,7 @@
 					<span>+ 1x Getränk (Cola o. Wein)</span>
 					<h3>17,- €</h3>
 				</div>
-				<a href="images/Schnitzel.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Schnitzel.jpg" alt="gallery img"></a>
+				<a href="images/Schnitzel.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/Schnitzel.jpg" alt="Schnitzel Angebot"></a>
 				<div>
 					<h3>Schnitzelangebot</h3>
 					<span>Schnitzel (nach wahl)</span><br>
